Fix buttons to show consistent size. Stop page from jumping when selecting

--- a/css/app.css
+++ b/css/app.css
@@ -68,6 +68,10 @@ body {
     border-radius: 0 3px 3px 0;
   }
 
+  .btn-group {
+    width: 900px;
+  }
+
   /*.headline {
     float: left;
   }*/
